second commit msg

--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<header>
+    <nav>
+        <ul class="nav_links">
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Socials</a></li>
+            <li><a href="#">Contact Me</a></li>
+        </ul>
+    </nav> 
+    <a href="#"><button><i class="fa-solid fa-moon"></i> Dark Mode</button></a>
+</header>
 <body>
-    <header>
-        <nav>
-            <ul class="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Socials</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </nav> 
-        <a href="#" class="cta"><button><i class="fa-solid fa-moon"></i> Dark Mode</button></a>
-    </header>
+    <div class="first_card">
+        <p>Welcome to my Page!</p>
+        <br>
+        <h1>Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Quos voluptatum eos 
+             necessitatibus omnis nam accusamus fugiat
+              distinctio recusandae culpa soluta obcaecati, 
+              et qui! Veritatis iure libero eius! Soluta iure 
+              debitis reiciendis amet similique vitae deserunt
+               tenetur, rem ipsum. Culpa, aliquam?</h1>
+    </div>
 </body>
 </html>
